--- a/app/views/forms/housing/CBLNI.html
+++ b/app/views/forms/housing/CBLNI.html
@@ -66,7 +66,7 @@
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>the actual single checkbox doesn't work (no visual feedback provided)</li>
-      <li>we could use radio buttons as above with a question - to be validated by Housing and Sharon</li>
+      <li>we could use radio buttons as above with a question - to be validated by Housing</li>
       <li>we could provide guidance about NI as above (to be validated)</li>
       <li>CHECK if this is ok with GDPR: <a href="https://design-system.service.gov.uk/patterns/national-insurance-numbers/" target="_blank" rel="noopener" >about using the NI</a>: <strong>You shouldn’t use National Insurance numbers to verify a user’s identity.</strong></li>
     </ul>
