--- a/app/views/forms/housing/CBLadd-children.html
+++ b/app/views/forms/housing/CBLadd-children.html
@@ -386,6 +386,7 @@
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
          <p>Wording would probably change - need to be seen by Sharon and approved by Housing</p>
+         <p><strong>GDPR: are we allowed to ask for thier address, is there a need?</strong></p>
       </div>
     </div>
 </div>
