--- a/app/views/forms/housing/CBLconfirmation.html
+++ b/app/views/forms/housing/CBLconfirmation.html
@@ -33,10 +33,17 @@
 
     </div>
 </div>
-
+<div class="content-notes-box">
+    <h3 class="govuk-heading-s">Content notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li>only provisional content - will need to be reviewed with Sharon and Housing</li>
+        <li>people won't read it especially considering how long this form takes to fill in</li>
+        <li>need the link to the privacy policy</li>
+    </ul>
+</div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>only provisional content - will need to be reviewed with Sharon and Housing - <br><strong>could we have a pdf or something the user can print of download?</strong></p>
+    <p><strong>could we have a pdf or something the user can print of download?</strong></p>
 </div>
 
 {% endblock %}
