--- a/app/views/forms/housing/CBLdeclaration1.html
+++ b/app/views/forms/housing/CBLdeclaration1.html
@@ -73,14 +73,14 @@
           items: [
             {
               value: "yes",
-              text: "yes",
+              text: "Yes",
               conditional: {
                 html: personHtml
               }
             },
             {
               value: "no",
-              text: "no"
+              text: "No"
             }
           ]
         }) }}
