--- a/app/views/forms/housing/CBLdeclaration2.html
+++ b/app/views/forms/housing/CBLdeclaration2.html
@@ -16,13 +16,13 @@
         </h2>
         <p>These statements apply to you and anybody included in this application:</p> 
         <ul class="govuk-list govuk-list--bullet">
-            <li>I am eligible to apply for housing and i will tell you if my circumstances change</li> 
-            <li>all the information i have given on this application form is true</li> 
-            <li>I understand that if i give false information or withhold information you have asked for, my application may be cancelled</li> 
-            <li>if i am offered housing because i have given false information or have withheld information you have asked for, i understand that you may end my tenancy and evict me from my home</li> 
+            <li>I am eligible to apply for housing and I will tell you if my circumstances change</li> 
+            <li>all the information I have given on this application form is true</li> 
+            <li>I understand that if I give false information or withhold information you have asked for, my application may be cancelled</li> 
+            <li>if I am offered housing because I have given false information or have withheld information you have asked for, I understand that you may end my tenancy and evict me from my home</li> 
         </ul>
         <p><strong>Permission to share information:</strong></p>
-        <p>I agree that any information i have given on this application can be shared with other landlords and organisations, in order to find me suitable housing, in line with General Data Protection Regulations.</p>
+        <p>I agree that any information I have given on this application can be shared with other landlords and organisations, in order to find me suitable housing, in line with General Data Protection Regulations.</p>
         <p>You can contact my doctor, hospital consultant, health visitor or social worker, the police or any other relevant person if you need more information for my housing application, in line with General Data Protection Regulations.</p>
 
         <p><a href="#">Housing Services Privacy Notice for GDPR.</a></p>
@@ -57,10 +57,13 @@
 
     </div>
 </div>
-
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>need the link to the privacy policy, and the content will have to be reviewed - this is too much for now </p>
+<div class="content-notes-box">
+    <h3 class="govuk-heading-s">Content notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li><strong>this content was not seen by Sharon - there is too much </strong></li>
+        <li>people won't read it especially considering how long this form takes to fill in</li>
+        <li>need the link to the privacy policy</li>
+    </ul>
 </div>
 
 {% endblock %}
