--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -15,7 +15,7 @@
         <h2 class="govuk-heading-m">
             We need to know who will be living with you
           </h2>
-          <p>Only add children if they live permanently with you.</p>
+          <p>In the following screens, only add children if they live permanently with you.</p>
           <p>Any children staying with you occasionally will be added later.</p>
 <br><br>
           <form class="form" method="post">
@@ -49,18 +49,22 @@
           </form>
     </div>
 </div>
+<div class="content-notes-box">
+  <h3 class="govuk-heading-s">Content notes:</h3>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><strong>Content for this page is only a place holder, it was be re-worded before testing</strong></li>
+    <li>Usability testing will help to see what is needed</li>
+    <li>this is a possible information page to add to provide guidance about the pages coming after (info about each person living with the main applicant)</li>
+    <li> we could add guidance about the meaning of joint applicant? pregnancy? adult / child status  for 16-18? or put it on the following page when it's relevant?</li>
+  </ul>
+</div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <ul class="govuk-list govuk-list--bullet">
-      <li><strong>Can the person live alone?</strong> if so, then we should ask and bypass the next page</li>
-      <li>this is a possible information page to add to provide guidance about the pages coming after (info about each person living with the main applicant)</li>
-      <li>the content should be drafted by sharon and agreed by Housing - Usability testing would help to see what is needed</li>
-      <li> we could add guidance about the meaning of joint applicant? pregnancy? adult / child status  for 16-18</li>
-    </ul>
+    <p><strong>Can the person live alone?</strong> if so, then we should ask and bypass the next page</p>
     <p><strong>There are a lot of potential flaws the moment:</strong></p>
     <ul class="govuk-list govuk-list--bullet">
       <li>should the main applicant add themselves here? - I assumed not so captured the info previously (DOB and gender)</li>
-      <li>where do you enter children living with you permanently?</li>
+      <li>where do you enter children living with you permanently? - I assumed here</li>
       <li>pregnancy: what if it's twins or more? teen pregnancy? main applicant is pregnant?</li>
       <li>number for the adult label: There is an 'adult 1' on the 'pregnancy page' and the same number appear on the 'not pregnant' page = confusing!</li>
     </ul>
