--- a/app/views/forms/housing/CBLmonitor.html
+++ b/app/views/forms/housing/CBLmonitor.html
@@ -31,10 +31,13 @@
 
     </div>
 </div>
-
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>this content was not seen by Sharon - there is too much - people won't read it especially considering how long this form takes</p>
+<div class="content-notes-box">
+    <h3 class="govuk-heading-s">Content notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+        <li><strong>this content was not seen by Sharon - there is too much </strong></li>
+        <li>people won't read it especially considering how long this form takes to fill in</li>
+    </ul>
 </div>
+
 
 {% endblock %}
