--- a/app/views/forms/housing/CBLother-children.html
+++ b/app/views/forms/housing/CBLother-children.html
@@ -47,6 +47,7 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
    <p>The wording would probably need to be changed by Sharon and approved by Housing</p>
+   <p><strong>Add guidance about the age of the child:  can they add children between 16- 18, older?</strong></p>
 </div>
 
 {% endblock %}
