--- a/app/views/forms/housing/CBLpostcode.html
+++ b/app/views/forms/housing/CBLpostcode.html
@@ -69,7 +69,7 @@
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>the actual single checkbox doesn't work (no visual feedback provided)</li>
-      <li>we could use radio buttons as above with a question - to be validated by Housing and Sharon</li>
+      <li>we could use radio buttons as above with a question - to be validated by Housing</li>
     </ul>
 </div>
 <div class="IT-notes-box">
