--- a/app/views/forms/housing/CBLaboutyou.html
+++ b/app/views/forms/housing/CBLaboutyou.html
@@ -52,7 +52,7 @@
 
       {{ govukInput({
         label: {
-          text: "Email address"
+          text: "Email (optional)"
         },
         hint: {
           text: "We’ll use this to send you a receipt."
@@ -77,7 +77,6 @@
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>we don't capture the gender or DOB of the applicant, what if it's a woman and she is pregnant?</li>
-      <li>should email be optional?</li>
       <li>as the form is really long, we should probably group all these questions on one page as they are easy and all related to the applicant</li>
     </ul>
 </div>
@@ -87,7 +86,7 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>On the actual 3 pages, all the inputs fields are too long - should be reduced</li>
       <li>on the phone page, the next button is at the wrong place</li>
-      <li>the email input page should come before the contact preferences in the flow of screens</li>
+      <li>the email input page should come before the contact preferences in the flow of screens - it's optional - label has changed</li>
     </ul>
 </div>
 {% endblock %}
