--- a/app/views/forms/housing/CBLadd-person2-loop.html
+++ b/app/views/forms/housing/CBLadd-person2-loop.html
@@ -16,7 +16,8 @@
       <h2 class="govuk-heading-m">
           Person 1:
       </h2>
-      <table class=" govuk-table half-width">
+      <div style="overflow: auto">
+        <table class=" govuk-table half-width">
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Name:</th><td class="govuk-table__cell no-border">{{data['first-name-person1']}}&nbsp;{{data['last-name-person1']}}</td></tr>
             <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date of birth:</th><td class="ngovuk-table__cell o-border">{{data['dob-person1-day']}}/{{data['dob-person1-month']}}/{{data['dob-person1-year']}}</td></tr>
@@ -25,6 +26,7 @@
             <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Relation to you:</th><td class="govuk-table__cell no-border">{{data['relationship1']}}</td></tr>
           </tbody>
         </table>
+      </div>
   
         <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible erc">
       <h2 class="govuk-heading-m">
